Issue #18259: Declare sethostname in socketmodule.c for AIX